# bmw2abc_converter

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
bmw2abc_converter/: __init__.py  converter.py  grace_notes.py
docs/: abc_bagpipe.md  bagpipe_notation_for_ai.md  bww2abc_original.js  bww_format.md
tests/: test_converter.py
