[project]
name = "bmw2abc-converter"
version = "0.1.0"
description = "Convert Bagpipe Music Writer (.bww/.bmw) files to ABC music notation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
bmw2abc = "bmw2abc_converter:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bmw2abc_converter"]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
]
